# notify-lsp-proxy

./: Cargo.toml  LICENSE  README.md
src/: main.rs
